--- a/forgot.html
+++ b/forgot.html
@@ -1,49 +1,182 @@
 <!DOCTYPE html>
 <html lang="ar">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>نسيت الكود - ثانوية التحدي</title>
-<link rel="stylesheet" href="style.css">
-<script src="main.js" defer></script>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>نسيت الكود - استرجاع كود الطالب</title>
+<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
+<style>
+:root{
+  --blue:#007bff;
+  --success:#28a745;
+  --danger:#dc3545;
+  --card:#fff;
+}
+body{
+  font-family:'Cairo',sans-serif;
+  direction:rtl;
+  margin:0;
+  min-height:100vh;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  background:linear-gradient(180deg,#f6fbff,#ffffff);
+  padding:18px;
+}
+.box{
+  max-width:760px;
+  width:100%;
+  background:var(--card);
+  border-radius:12px;
+  box-shadow:0 12px 30px rgba(0,0,0,0.09);
+  padding:22px;
+  opacity:0;
+  transform:translateY(40px);
+}
+.header{display:flex;justify-content:space-between;align-items:center;flex-wrap:wrap}
+.header h2{margin:0}
+.form{margin-top:14px;display:flex;flex-direction:column;gap:12px}
+.input{display:flex;align-items:center;border:1px solid #eee;padding:10px;border-radius:8px;background:#fafafa}
+.input input{border:0;outline:0;flex:1;background:transparent;font-size:15px}
+.btn{
+  padding:12px 18px;
+  border-radius:8px;
+  border:0;
+  cursor:pointer;
+  font-weight:700;
+  transition:0.2s;
+  font-size:15px;
+}
+.btn-primary{background:var(--blue);color:#fff}
+.btn-primary:hover{
+  transform:scale(1.03);
+  box-shadow:0 4px 12px rgba(0,0,0,0.1);
+}
+.btn-secondary{background:#f0f0f0;color:#333}
+.btn-secondary:hover{
+  transform:scale(1.03);
+  box-shadow:0 4px 12px rgba(0,0,0,0.1);
+}
+.result{margin-top:16px;min-height:120px;display:flex;align-items:center;justify-content:center;}
+.card{padding:18px;border-radius:12px;background:linear-gradient(180deg,#fff,#f7fbff);box-shadow:0 12px 26px rgba(0,0,0,0.06);text-align:center;width:100%;max-width:520px;}
+.card h3{margin:0 0 8px 0;font-size:18px}
+.codeBox{margin-top:12px;font-size:26px;font-weight:800;letter-spacing:6px;padding:12px 18px;border-radius:10px;display:inline-block;background:linear-gradient(90deg,#fff,#f8fffb);box-shadow:0 6px 18px rgba(0,0,0,0.06);}
+.chars{display:inline-block;opacity:0}
+.chars.visible{opacity:1;animation:fadeUp .6s ease forwards}
+@keyframes fadeUp{from{transform:translateY(8px);opacity:0}to{transform:translateY(0);opacity:1}}
+.err{color:var(--danger);font-weight:700;animation:shake .5s}
+@keyframes shake{0%,100%{transform:translateX(0)}20%{transform:translateX(-8px)}40%{transform:translateX(8px)}60%{transform:translateX(-6px)}80%{transform:translateX(6px)}}
+.copyBtn{margin-top:12px;padding:10px 12px;border-radius:8px;border:0;cursor:pointer;font-weight:700;transition:0.2s;}
+.copyBtn.success{background:var(--success);color:#fff}
+.copyBtn.fail{background:#f0f0f0;color:#333}
+.copyBtn:hover{transform:scale(1.05);}
+.back{margin-top:14px;text-align:center}
+.back a{color:var(--blue);text-decoration:underline}
+</style>
 </head>
 <body>
-<div class="app">
-  <div class="app-header">
-    <h1>نسيت كود الطالب</h1>
-    <p>استعادة الكود عبر رقم ولي الأمر</p>
+<div class="box" role="main">
+  <div class="header">
+    <h2>نسيت الكود الخاص بي</h2>
+    <div class="hint">أدخل الاسم الرباعي ورقم ولي الأمر لاسترجاع الكود</div>
   </div>
-
-  <div class="input-row">
-    <div class="field"><input id="parentNumber" placeholder="أدخل رقم ولي الأمر"></div>
-    <button class="primary" onclick="recoverCode()">استعادة</button>
-    <button class="yellow" onclick="window.location.href='index.html'">عودة لتسجيل الدخول</button>
+  <div class="form" id="forgotForm">
+    <div class="input"><input id="parent" placeholder="رقم ولي الأمر" inputmode="numeric" /></div>
+    <div class="input"><input id="studentName" placeholder="الاسم الرباعي للطالب كما في السجل" /></div>
+    <div style="display:flex;gap:8px;justify-content:center">
+      <button class="btn btn-primary" id="searchBtn">بحث عن الكود</button>
+      <button class="btn btn-secondary" id="clearBtn">مسح الحقول</button>
+    </div>
+    <div class="result" id="resultArea">
+      <div style="text-align:center;color:#666">النتيجة ستظهر هنا بعد البحث</div>
+    </div>
+    <div class="back">
+      <a href="index.html">◀ العودة إلى صفحة تسجيل الدخول</a>
+    </div>
   </div>
-
-  <div id="message" class="note"></div>
 </div>
 
-<nav class="bottom-nav">
-  <a href="account.html" class="nav-item"><span>الحساب</span></a>
-  <a href="grades.html" class="nav-item"><span>الدرجات</span></a>
-  <a href="notifications.html" class="nav-item"><span>التبليغات</span></a>
-</nav>
-
 <script>
-async function recoverCode(){
-  const parent = document.getElementById('parentNumber').value.trim();
-  const msg = document.getElementById('message');
-  if(!parent){ msg.textContent="⚠️ الرجاء إدخال رقم ولي الأمر"; return; }
-  msg.textContent="⏳ جاري البحث...";
-  try{
-    const student = await PortalAPI.findByParentAndName(parent,"");
-    if(!student){ msg.textContent="❌ لم يتم العثور على بيانات"; return; }
-    msg.innerHTML = `✅ كود الطالب هو: <b>${student['كود الطالب']||student['كود']}</b>`;
-  }catch(e){
-    msg.textContent="❌ حدث خطأ أثناء الاتصال بالبيانات";
-    console.error(e);
-  }
+/* GSAP Animation */
+window.addEventListener('DOMContentLoaded',()=>{
+  gsap.to('.box',{duration:0.8,opacity:1,y:0,ease:"power3.out"});
+  gsap.from('.input',{duration:0.8,opacity:0,x:40,stagger:0.1,delay:0.2});
+  gsap.from('.back',{duration:0.8,opacity:0,delay:0.8});
+});
+
+/* رابط البيانات */
+const sheetURL="https://docs.google.com/spreadsheets/d/e/2PACX-1vReghaYoMk3f8ffSBLRHIwZieEWCfk5Yx8W6c843TXkC6wpA78Z0X5nw21RRpxMdQ/pub?gid=1229272896&single=true&output=csv";
+
+/* CSV Parsing */
+function parseCSV(text){const rows=[];let cur='',row=[],inQuotes=false;for(let i=0;i<text.length;i++){const ch=text[i],next=text[i+1];if(ch=='"'){if(inQuotes&&next=='"'){cur+='"';i++;continue;}inQuotes=!inQuotes;continue;}if(ch=='\r')continue;if(ch==','&&!inQuotes){row.push(cur);cur='';continue;}if(ch=='\n'&&!inQuotes){row.push(cur);rows.push(row);row=[];cur='';continue;}cur+=ch;}if(cur!=''||row.length>0){row.push(cur);rows.push(row);}return rows;}
+function normalizeKey(k){return (k||'').toString().trim();}
+async function fetchSheetObjects(){const resp=await fetch(sheetURL);if(!resp.ok)throw new Error("فشل جلب البيانات");const text=await resp.text();const rows=parseCSV(text).filter(r=>r.some(c=>c.trim()!=''));if(rows.length===0)return{header:[],rows:[]};const header=rows[0].map(h=>normalizeKey(h));const dataRows=rows.slice(1);const objects=dataRows.map(r=>{const obj={};for(let i=0;i<header.length;i++){obj[header[i]]=(r[i]||'').toString().trim();}return obj;});return{header,rows:objects};}
+
+const resultArea=document.getElementById('resultArea');
+const parentInput=document.getElementById('parent');
+const nameInput=document.getElementById('studentName');
+
+function cleanNumber(n){if(!n)return'';n=n.toString().trim();if(n.startsWith('0'))n=n.replace(/^0+/,'');return n;}
+function showError(msg){resultArea.innerHTML=`<div class="card err">${msg}</div>`;}
+function showMessageHTML(html){resultArea.innerHTML=html;}
+function revealCodeAnim(codeStr){
+  const html=`<div class="card">
+  <h3>الكود الخاص بالطالب هو:</h3>
+  <div class="codeBox" id="codeBox"></div>
+  <div><button class="copyBtn" id="copyBtn">نسخ الكود</button></div>
+  </div>`;
+  showMessageHTML(html);
+  const box=document.getElementById('codeBox');
+  box.innerHTML='';
+  const chars=Array.from(codeStr);
+  chars.forEach((ch,idx)=>{
+    const span=document.createElement('span');
+    span.textContent=ch;
+    span.className='chars';
+    box.appendChild(span);
+    setTimeout(()=>span.classList.add('visible'),80*idx);
+  });
+
+  // نسخ الكود
+  const copyBtn=document.getElementById('copyBtn');
+  copyBtn.addEventListener('click',()=>{
+    navigator.clipboard.writeText(codeStr).then(()=>{
+      copyBtn.textContent="تم النسخ!";
+      copyBtn.classList.add('success');
+      setTimeout(()=>{copyBtn.textContent="نسخ الكود";copyBtn.classList.remove('success');},1500);
+    }).catch(()=>{copyBtn.classList.add('fail');});
+  });
 }
+
+/* البحث */
+document.getElementById('searchBtn').addEventListener('click',async()=>{
+  const parent=cleanNumber(parentInput.value);
+  const name=(nameInput.value||'').toString().trim().toLowerCase();
+  if(!parent||!name){showError('الرجاء إدخال الاسم الرباعي ورقم ولي الأمر');return;}
+  showMessageHTML(`<div style="color:#666">⏳ جاري البحث...</div>`);
+  try{
+    const{header,rows}=await fetchSheetObjects();
+    const found=rows.find(r=>{
+      const p=cleanNumber(r['رقم ولي الامر']||r['رقم ولي الأمر']||r['ولي الامر']||r['parent']||'');
+      const studentName=(r['اسم الطالب']||r['اسم']||r['Name']||'').toString().trim().toLowerCase();
+      return p===parent&&studentName===name;
+    });
+    if(!found){showError('❌ البيانات خاطئة — حاول أن تتذكر أو راجع قسم الحوكمة');return;}
+    const code=found['كود الطالب']||found['كود']||found['id']||found['ID']||'';
+    if(!code){showError('لم يتم العثور على كود في السجل — تواصل مع قسم الحوكمة');return;}
+    revealCodeAnim(code);
+  }catch(err){
+    console.error(err);
+    showError('حدث خطأ أثناء الوصول إلى الملف. تأكد من اتصال الإنترنت وحاول مرة أخرى.');
+  }
+});
+
+/* مسح الحقول */
+document.getElementById('clearBtn').addEventListener('click',()=>{
+  parentInput.value='';nameInput.value='';
+  resultArea.innerHTML='<div style="text-align:center;color:#666">النتيجة ستظهر هنا بعد البحث</div>';
+});
 </script>
 </body>
 </html>
