--- a/index.html
+++ b/index.html
@@ -4,61 +4,188 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>ثانوية التحدي</title>
-<link rel="stylesheet" href="style.css">
+<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
-<script defer src="main.js"></script>
+<style>
+body{
+  font-family:'Cairo',sans-serif;
+  direction:rtl;
+  margin:0;
+  padding:0;
+  background:linear-gradient(to bottom,#ffffff,#87cefa,#9370db);
+  overflow-x:hidden;
+}
+header{
+  background:linear-gradient(90deg,#87cefa,#9370db);
+  color:#fff;
+  text-align:center;
+  padding:25px 10px;
+  font-size:28px;
+  font-weight:bold;
+  box-shadow:0 4px 10px rgba(0,0,0,0.2);
+}
+.container{
+  max-width:1200px;
+  margin:0 auto;
+  padding:15px;
+}
+.input-group{
+  display:flex;
+  justify-content:center;
+  flex-wrap:wrap;
+  gap:10px;
+  margin:20px 0;
+}
+.input-group input{
+  flex:0 0 160px;
+  padding:10px;
+  font-size:14px;
+  border-radius:8px;
+  border:1px solid #ccc;
+}
+.input-group input:focus{
+  outline:none;
+  border-color:#4e54c8;
+  box-shadow:0 0 8px rgba(78,84,200,0.3);
+}
+button{
+  padding:10px 20px;
+  font-size:14px;
+  border:none;
+  border-radius:8px;
+  cursor:pointer;
+  font-weight:700;
+  transition:all 0.3s ease;
+}
+button:hover{
+  transform:scale(1.05);
+}
+#loginBtn{
+  background:linear-gradient(90deg,#4e54c8,#8f94fb);
+  color:#fff;
+}
+#forgotBtn{
+  background:#ffc107;
+  color:#000;
+}
+.section{
+  background:#fff;
+  border-radius:12px;
+  padding:10px;
+  margin-bottom:20px;
+  box-shadow:0 10px 30px rgba(0,0,0,0.1);
+  display:none;
+  max-height:500px;
+  overflow:auto;
+}
+table{
+  width:100%;
+  border-collapse:collapse;
+}
+th,td{
+  padding:4px 2px;
+  border:1px solid #ddd;
+  word-wrap:break-word;
+  text-align:right;
+  font-size:12px;
+}
+tr:hover{
+  background-color:rgba(78,84,200,0.1);
+}
+#bottomBar{
+  position:fixed;
+  bottom:0;
+  left:0;
+  width:100%;
+  display:flex;
+  background:linear-gradient(90deg,#ffffff,#87cefa,#9370db);
+  padding:10px 0;
+  box-shadow:0 -4px 12px rgba(0,0,0,0.2);
+  z-index:1000;
+}
+#bottomBar div{
+  flex:1;
+  margin:0 5px;
+  background:rgba(255,255,255,0.2);
+  border-radius:10px;
+  padding:5px;
+  overflow:auto;
+}
+#bottomBar div h4{
+  text-align:center;
+  margin:5px 0;
+  font-size:14px;
+}
+textarea{
+  width:100%;
+  height:60px;
+  border-radius:8px;
+  border:1px solid #ccc;
+  padding:5px;
+  resize:none;
+}
+a.whatsapp{
+  display:block;
+  text-align:center;
+  margin-top:15px;
+  color:#fff;
+  font-weight:bold;
+  text-decoration:none;
+}
+</style>
 </head>
 <body>
-  <!-- الصفحة الرئيسية -->
-  <div id="loginPage" class="page">
-    <h1>ثانوية التحدي</h1>
-    <div class="loginForm">
-      <input type="text" id="parentNumber" placeholder="رقم ولي الامر">
-      <input type="text" id="studentCode" placeholder="كود الطالب">
-      <button id="loginBtn">تسجيل الدخول</button>
-      <button id="forgotBtn">نسيت الكود</button>
-    </div>
+
+<header>
+🎓 ثانوية التحدي الأهلية
+<span style="font-size:16px; display:block; font-weight:normal;">العام الدراسي 2025-2026</span>
+</header>
+
+<div class="input-group" id="loginForm">
+  <input id="parentNumber" placeholder="أدخل رقم ولي الأمر">
+  <input id="studentCode" placeholder="أدخل كود الطالب">
+  <button id="loginBtn">تسجيل الدخول</button>
+  <button id="forgotBtn" onclick="window.location.href='forgot.html'">نسيت الكود؟</button>
+</div>
+
+<div class="container">
+  <div class="section" id="accountSection">
+    <button id="logoutBtn">تسجيل الخروج</button>
+    <button id="saveBtn">حفظ التعديلات</button>
+    <h3>المعلومات العامة</h3>
+    <table id="generalInfoTable"></table>
+    <h3>المعلومات المالية</h3>
+    <table id="financialTable"></table>
   </div>
-
-  <!-- الصفحة بعد تسجيل الدخول -->
-  <div id="mainPage" class="page hidden">
-    <header>
-      <button id="logoutBtn">تسجيل الخروج</button>
-      <button id="saveBtn">حفظ التعديلات</button>
-    </header>
-
-    <!-- البار السفلي -->
-    <div id="bottomBar">
-      <section id="accountSection">
-        <h2>معلومات الطالب</h2>
-        <table id="generalInfoTable"></table>
-      </section>
-      <section id="financialSection">
-        <h2>المعلومات المالية</h2>
-        <table id="financialTable"></table>
-      </section>
-      <section id="gradesSection">
-        <h2>الدرجات</h2>
-        <table id="gradesTable"></table>
-      </section>
-      <section id="notificationsSection">
-        <h2>التبليغات</h2>
-        <div id="notificationsArea"></div>
-      </section>
-      <section id="chatSection">
-        <h2>الدردشة</h2>
-        <div id="chatArea"></div>
-        <input type="text" id="chatInput" placeholder="اكتب رسالتك هنا">
-        <button id="sendChat">ارسال</button>
-      </section>
-    </div>
+  <div class="section" id="gradesSection">
+    <h3>الدرجات التفصيلية</h3>
+    <table id="gradesTable"></table>
+    <h3>الملاحظات والغياب</h3>
+    <table id="notesTable"></table>
   </div>
+  <div class="section" id="alertsSection">
+    <h3>التبليغات</h3>
+    <div id="notificationsArea">لا توجد تبليغات حتى الآن.</div>
+  </div>
+  <div class="section" id="chatSection">
+    <h3>الدردشة</h3>
+    <div id="chatArea">لا توجد رسائل حتى الآن.</div>
+    <textarea id="chatInput" placeholder="اكتب رسالتك هنا"></textarea>
+    <button id="sendChatBtn">إرسال</button>
+  </div>
+  <div class="section" id="contactSection">
+    <h3>تواصل معنا</h3>
+    <a class="whatsapp" href="https://wsend.co/9647851521585" target="_blank">رابط الواتساب</a>
+  </div>
+</div>
 
-  <footer>
-    <div class="contact">
-      <p>تواصل معنا إذا كنت تواجه مشاكل</p>
-      <a href="https://wsend.co/9647851521585" target="_blank">واتساب الدعم</a>
-    </div>
-  </footer>
+<div id="bottomBar">
+  <div id="accountBar"><h4>الحساب</h4></div>
+  <div id="financeBar"><h4>المعلومات المالية</h4></div>
+  <div id="gradesBar"><h4>الدرجات</h4></div>
+  <div id="alertsBar"><h4>التبليغات والدردشة</h4></div>
+</div>
+
+<script src="main.js"></script>
 </body>
 </html>
